Keyboard: fix overlapping elements

--- a/css/components/spa-keyboard.css
+++ b/css/components/spa-keyboard.css
@@ -126,7 +126,7 @@
 }
 
 #kbd-pigpen-border {
-  width: 10rem;
+  width: 8rem;
   margin: 0 -1rem;
   position: relative;
 }
